@@ -1,4 +1,14 @@
 ------------------------------------------------------
+Release 2 | Beta 1 | Development 2 | Experimental 3
+
+* Added GUIInterpreter
+* Added GUIInterpreterObject
+* Added GUIInterpreterObjects
+* Added MLGUI
+
+* Created the package org.andor.core.interpreter.gui
+
+------------------------------------------------------
 Release 2 | Beta 1 | Development 2 | Experimental 2
 
 * Added MLConfig
@@ -15,7 +25,7 @@ Release 2 | Beta 1 | Development 2 | Experimental 1
 * Added MLTree
 * Added MLObject
 
-* Created org.andor.core.parset.ml
+* Created org.andor.core.parser.ml
 * Created org.andor.core.parser.utils
 
 ------------------------------------------------------
